Add headless support and add alt url

--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 DEBUG=false
+HEADLESS=false
 SELENIUM_PATH=binaries/selenium-server.jar
 GECKO_DRIVER_PATH=binaries/geckodriver.exe
 PORT=8080
 SO_URL=https://stackoverflow.com/users/login
+SO_URL_ALT=https://ru.stackoverflow.com
 SO_EMAIL=STACKOVERFLOW_EMAIL
 SO_PASS=STACKOVERFLOW_PASSWORD
