Add chrome driver

--- a/.env
+++ b/.env
@@ -1,8 +1,11 @@
-DEBUG=false
-HEADLESS=false
-SELENIUM_PATH=binaries/selenium-server.jar
-GECKO_DRIVER_PATH=binaries/geckodriver.exe
+DEBUG=true
+SELENIUM_OUTPUT=true
+SELENIUM_PATH=./binaries/selenium-server.jar
+GECKO_DRIVER_PATH=/usr/bin/geckodriver
+CHROME_DRIVER_PATH=./binaries/chromedriver.exe
 PORT=8080
+BROWSER_NAME=chrome
+CAPABILITIES=--headless,--no-sandbox
 SO_URL=https://stackoverflow.com/users/login
 SO_URL_ALT=https://ru.stackoverflow.com
 SO_EMAIL=STACKOVERFLOW_EMAIL
