--- a/.env
+++ b/.env
@@ -1,12 +1,11 @@
 DEBUG=true
-SELENIUM_OUTPUT=true
+SELENIUM_OUTPUT=false
 SELENIUM_PATH=./binaries/selenium-server.jar
 GECKO_DRIVER_PATH=/usr/bin/geckodriver
-CHROME_DRIVER_PATH=./binaries/chromedriver.exe
+CHROME_DRIVER_PATH=./binaries/chromedriver
 PORT=8080
 BROWSER_NAME=chrome
 CAPABILITIES=--headless,--no-sandbox
-SO_URL=https://stackoverflow.com/users/login
-SO_URL_ALT=https://ru.stackoverflow.com
+JOBS_CONFIG=pipeline.yaml
 SO_EMAIL=STACKOVERFLOW_EMAIL
 SO_PASS=STACKOVERFLOW_PASSWORD
